FU-67 CR-307 fixes